--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "materialui-pagination-component": "^1.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "sass": "^1.69.3",
     "styled-components": "^6.1.0",
     "uuid": "^9.0.1"
