--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "axios": "^1.5.1",
     "babel": "^6.23.0",
     "jest": "^29.7.0",
     "jwt-decode": "^3.1.2",
